# python

./: .coafile  .gitignore  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  .zuul.yaml  CHANGELOG.md  MANIFEST.in  OWNERS  Pipfile  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: pr.yaml
docs/source/: conf.py  index.rst
tests/: __init__.py  aiosource_test.py  base.py  helpers_test.py  package_version_test.py  pipfile_test.py  project_test.py  provenance_test.py  source_test.py  test.py  test_aiosource.py  test_constraints.py  test_helpers.py  test_package_version.py  test_pipfile.py  test_project.py  test_provenance.py  test_source.py
tests/data/: selinon-warehouse-api.json  tensorflow.html  tensorflow_serving_api-1.13.0-py2.py3-f29-any.json  tensorflow_serving_api-1.13.0-py2.py3-f29-any.whl  tensorflow_serving_api-1.13.0-py2.py3-none-any.json  tensorflow_serving_api-1.13.0-py2.py3-none-any.whl
tests/data/constraints/: constraints_0.txt  constraints_1.txt  constraints_3.txt
tests/data/pipfiles/: Pipfile_extras  Pipfile_requirements  Pipfile_test1  Pipfile_thoth
tests/data/requirements/: parse_requirements.txt
tests/data/requirements/example_dir1/: requirements.txt
tests/data/requirements/example_dir2/: requirements.in  requirements.txt
thoth/python/: __init__.py  aiosource.py  artifact.py  configuration.py  constraints.py  digests_fetcher.py  exceptions.py  helpers.py  lazy.py  package_version.py  packages.py  pipfile.py  project.py  python_artifact.py  source.py
